# SpaceGame

./: .gitignore  CMakeLists.txt
include/: Player.h  Projectile.h  Ship.h  SpaceRenderer.h  SpaceUtil.h
res/: res.h
res/shaders/: stars.frag  stars.vert
src/: main.cpp
src/characters/: Player.cpp  Projectile.cpp  Ship.cpp  Ship.h
src/renderer/: SpaceRenderer.cpp  SpaceRenderer.h
